[project]
name = "datasette-studio"
version = "0.1a4"
description = "Datasette pre-configured with useful plugins"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "datasette>=1.0a13",
    "datasette-edit-schema",
    "datasette-write-ui",
    "datasette-configure-fts",
    "datasette-write",
    "datasette-upload-csvs",
    "datasette-enrichments",
    "datasette-enrichments-quickjs",
    "datasette-enrichments-re2",
    "datasette-enrichments-jinja",
    "datasette-copyable",
    "datasette-export-database",
    "datasette-enrichments-gpt",
    "datasette-import",
    "datasette-extract",
    "datasette-secrets",
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-studio"
Changelog = "https://github.com/datasette/datasette-studio/releases"
Issues = "https://github.com/datasette/datasette-studio/issues"
CI = "https://github.com/datasette/datasette-studio/actions"

[project.entry-points.console_scripts]
datasette-studio = "datasette.cli:cli"
